corrigindo o exercicio