@@ -2,9 +2,10 @@ package br.com.juan;
 
 public class Main {
     public static void main(String[] args) {
-        int numero = 50;
-        System.out.println(numero);
-        int numero1 = new Integer(50);
-        System.out.println(numero1);
+        int numeroPrimitivo = 50;
+        System.out.println(numeroPrimitivo);
+
+        Integer numeroWrapper = Integer.valueOf(numeroPrimitivo);
+        System.out.println(numeroWrapper);
     }
 }
